<resources>
    <string name="app_name">Manga Motion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button">Search button</string>
    <string name="login_page_picture">Login Page picture</string>
    <string name="welcome_to_manga_motion">Welcome to Manga Motion</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
</resources>