<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <!--Guide Lines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="13dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_10mdp" />

    <!--Form-->
    <ScrollView
        android:id="@+id/form_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_10mdp"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/header_img"
                android:layout_width="@dimen/_150mdp"
                android:layout_height="@dimen/_150mdp"
                android:layout_margin="@dimen/_15mdp"
                android:contentDescription="@string/login_page_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/login" />

            <TextView
                android:id="@+id/greeting_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20mdp"
                android:text="@string/welcome_to_manga_motion"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/_20font_mdp"
                app:layout_constraintEnd_toEndOf="@id/header_img"
                app:layout_constraintStart_toStartOf="@id/header_img"
                app:layout_constraintTop_toBottomOf="@id/header_img" />


            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_txt_lay"
                style="@style/DefaultTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginHorizontal="@dimen/_5mdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/greeting_txt"
                app:startIconDrawable="@drawable/envelope">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_txt_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_txt_lay"
                style="@style/DefaultTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10mdp"
                android:layout_marginBottom="@dimen/_5mdp"
                android:layout_marginHorizontal="@dimen/_5mdp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_txt_lay"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_txt_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <!--<com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50mdp"
        android:layout_marginBottom="@dimen/_10mdp"
        android:layout_marginHorizontal="@dimen/_8mdp"
        android:enabled="false"
        android:text="@string/sign_up"
        android:textSize="@dimen/_18font_mdp"
        app:layout_constraintTop_toBottomOf="@id/form_lay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        app:layout_constraintStart_toStartOf="@id/guide_left" />-->

    <io.writeopia.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50mdp"
        android:layout_marginHorizontal="@dimen/_8mdp"
        android:layout_marginBottom="@dimen/_10mdp"
        android:enabled="false"
        android:layout_marginTop="@dimen/_5mdp"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_bg"
        android:textSize="@dimen/_18font_mdp"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintTop_toBottomOf="@id/form_lay"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>